// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Richtext Block should render Default 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
  margin-bottom: 0.35em;
}

.emotion-3 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
  margin-bottom: 0.35em;
}

@media (min-width: 900px) {
  .emotion-3 {
    font-size: 32px;
  }
}

.emotion-3:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.4;
  margin-bottom: 0.35em;
}

.emotion-4:last-child {
  margin-bottom: 0;
}

.emotion-5 {
  border-collapse: collapse;
}

.emotion-6 {
  border-collapse: collapse;
  border: 1px solid #000000;
  padding: 8px;
}

.emotion-7 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-7.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-7:last-child {
  margin-bottom: 0;
}

.emotion-15 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-15:hover {
  text-decoration-color: inherit;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <div>
        <h2
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <hr />
      </div>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Richtext Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
  margin-bottom: 0.35em;
}

.emotion-3 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
  margin-bottom: 0.35em;
}

@media (min-width: 900px) {
  .emotion-3 {
    font-size: 32px;
  }
}

.emotion-3:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.4;
  margin-bottom: 0.35em;
}

.emotion-4:last-child {
  margin-bottom: 0;
}

.emotion-5 {
  border-collapse: collapse;
}

.emotion-6 {
  border-collapse: collapse;
  border: 1px solid #000000;
  padding: 8px;
}

.emotion-7 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-7.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-7:last-child {
  margin-bottom: 0;
}

.emotion-15 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-15:hover {
  text-decoration-color: inherit;
}

<div
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <div>
        <h2
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <hr />
      </div>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Richtext Block should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 3rem;
  margin-bottom: 0.35em;
}

.emotion-3 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
  margin-bottom: 0.35em;
}

@media (min-width: 900px) {
  .emotion-3 {
    font-size: 32px;
  }
}

.emotion-3:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.4;
  margin-bottom: 0.35em;
}

.emotion-4:last-child {
  margin-bottom: 0;
}

.emotion-5 {
  border-collapse: collapse;
}

.emotion-6 {
  border-collapse: collapse;
  border: 1px solid #000000;
  padding: 8px;
}

.emotion-7 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-7.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-7:last-child {
  margin-bottom: 0;
}

.emotion-15 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-15:hover {
  text-decoration-color: inherit;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      data-gramm="false"
      data-slate-editor="true"
      data-slate-node="value"
      style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
    >
      <div>
        <h2
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-2"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <hr />
      </div>
      <h3
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-3"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 2
          </span>
        </span>
      </h3>
      <h4
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-4"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Title 3
          </span>
        </span>
      </h4>
      <ul
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Unordered List
            </span>
          </span>
        </li>
      </ul>
      <ol
        data-slate-node="element"
      >
        <li
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Ordered List
            </span>
          </span>
        </li>
      </ol>
      <table
        class="emotion-5"
      >
        <tbody
          data-slate-node="element"
        >
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 1
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 2
                  </span>
                </span>
              </p>
            </td>
          </tr>
          <tr
            data-slate-node="element"
          >
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 3
                  </span>
                </span>
              </p>
            </td>
            <td
              class="emotion-6"
              data-slate-node="element"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
                data-slate-node="element"
              >
                <span
                  data-slate-node="text"
                >
                  <span
                    data-slate-string="true"
                  >
                    Table Cell 4
                  </span>
                </span>
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-7"
        data-slate-node="element"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            Normal text,
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <strong
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
               Bold
            </span>
          </strong>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <em
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Italic
            </span>
          </em>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <u
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Underline
            </span>
          </u>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <del
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Strikethrough
            </span>
          </del>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sup
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sup
            </span>
          </sup>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <span
          data-slate-node="text"
        >
          <sub
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Sub
            </span>
          </sub>
        </span>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 
          </span>
        </span>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-15"
          data-slate-node="element"
          href="https://google.com"
          rel="noreferrer"
          target="_blank"
          title="Link"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Link
            </span>
          </span>
        </a>
        <span
          data-slate-node="text"
        >
          <span
            data-slate-string="true"
          >
            , 😀
          </span>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
